--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,32 @@
-# Python
+# runtime artifacts
+data/
+results/
+logs/
+outputs/
+checkpoints/
+*.csv
+*.jsonl
+
+# python build/cache
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-*.egg-info/
-dist/
-build/
-
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# Data files (too large for git)
-data/winoground/images/
-data/aro/images/
-*.zip
-*.tar.gz
-
-# Model cache (downloaded models)
-models/__pycache__/
-.cache/
-*.bin
-*.safetensors
-
-# Results (keep structure, but data can be large)
-results/*.csv
-results/*.json
-
-# Logs
-*.log
-# *.txt
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# External repos
-vision-language-models-are-bows/
-
-# Jupyter
+*.pyc
 .ipynb_checkpoints/
-*.ipynb
 
-# Temporary files
-temp/
-tmp/
+# envs & local config
+venv/
+.env
+.python-version
+
+# model weights / caches
+*.pt
+*.bin
+*.ckpt
+*.safetensors
+.cache/
+huggingface/
+HF_HOME/
+TRANSFORMERS_CACHE/
+
+# OS/editor
+.DS_Store
+*.swp
